# mmio-rs

./: .gitignore  Cargo.toml  README.md  build.rs  p.py
.github/workflows/: CI.yml
assets/: fake2mock.ocafile
binder/: start
docs/examples/: gwas.py  p.py
docs/examples/notebooks/: Concatenate attributes.ipynb  Infer semantics.ipynb  Semantic interop.ipynb
src/: events.rs  lib.rs
