[package]
name = "m2io_tmp"
version = "0.2.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "m2io_tmp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
oca-sdk-rs = { version = "2.0.0-rc1", path = "../oca-sdk-rs" }
said = { version = "0.4.1", features = ["macros"] }
maplit = "1.0.2"
lazy_static = "1.5.0"
indexmap = { version = "1.9.3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = "0.42.0"
pyo3-polars = "0.16.1"
