[package]
name = "m2io_tmp"
description = "Multi modal integration object (MMIO) implementation in Rust"
documentation = "github.com/THCLab/NextGen/"
version = "0.2.1"
edition = "2021"
license = "EUPL-1.2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "m2io_tmp"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "m2io"
path = "src/bin/main.rs"

[dependencies]
pyo3 = "0.26.0"
oca-sdk-rs = { version = "2.0.0-rc.5" }
said = { version = "0.5.2", features = ["file"] }
maplit = "1.0.2"
lazy_static = "1.5.0"
indexmap = { version = "1.9.3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = "0.52.0"
pyo3-polars = "0.25.0"

# Binary dependencies
clap = { version = "4.4", features = ["derive"] }
infer = "0.19.0"
